<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    tools:context=".Dashboard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dashboard_title"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/blankUserName"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                />


            <ImageView
                android:id="@+id/profileIcon"
                android:layout_alignParentRight="true"
                android:src="@drawable/userprofile"
                android:layout_width="62dp"
                android:layout_height="62dp"/>

        </RelativeLayout>

        <GridLayout
            android:columnCount="2"
            android:rowCount="4"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/logs_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <ImageView
                        android:src="@drawable/logs"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="18sp"
                        android:text="@string/logs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mobile_inbox_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/mobileinbox"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/movies_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/movie"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="18sp"
                        android:text="@string/movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weather_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/weather"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="18sp"
                        android:text="@string/weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/jokes_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/laughing"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="18sp"
                        android:text="@string/jokes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/random_facts_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/books"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/random"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/facts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/time_zones_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/clock"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/timezones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/custom_events_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="60dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/gears"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/LightGreen"
                        android:textSize="12sp"
                        android:text="@string/events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>



        </GridLayout>





    </LinearLayout>


</ScrollView>